--- a/INSTRUCTION1.html
+++ b/INSTRUCTION1.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         h1{
-            color: dark green;
+            color: red;
         }
     </style>
 </head>
